fix: delete vertical alignment according to rule 3.4 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -109,10 +109,6 @@ input#new-task {
   align-items: center;
 }
 
-li > * {
-  vertical-align: middle;
-}
-
 .task__checkbox {
   margin: 0 10px;
 }
